Fix scopes